--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "symfony/serializer": "^2.8 || ^3.4 || ^4.0 || ^5.0",
-        "elasticsearch/elasticsearch": "8.0.*"
+        "elasticsearch/elasticsearch": "^8.2"
     },
     "require-dev": {
         "nyholm/psr7": "^1.5",
